tests/compile-fail/integration__integration__timeline_arg0__signature_with_arg0_in_not_timeline.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: T(...) is only valid in th06 and th07 timelines
  ┌─ <mapfile-1>:3:6
  │
3 │ 1000 T(m)
  │      ^^^^ T(...) is only valid in th06 and th07 timelines


